fixed Card overflowing

--- a/src/App.scss
+++ b/src/App.scss
@@ -759,7 +759,7 @@ footer {
     }
 
     .card {
-        width: 10rem;
+        width: 15rem;
 
         .grid_container {
             padding-inline: 0.1rem;
